# STM32_gtest_cmake

./: README.md
ExampleProject/STM32_Project/Core/: main.c
ExampleProject/STM32_Project/Project/inc/: projectMain.h
ExampleProject/STM32_Project/Project/src/: projectMain.c
ExampleProject/STM32_Test/: CMakeLists.txt  CMakeLists.txt.in
ExampleProject/STM32_Test/src/: main.c
ExampleProject/STM32_Test/test/: CMakeLists.txt  projectmain_test.cpp
